--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>
       Free Modern React Templates & Components for building landing pages and
-      UIs - Q-React
+      UIs - TReact
     </title>
     <link rel="stylesheet" href="./styles.css" />
     <script
@@ -19,7 +19,7 @@
       <nav>
         <div class="row nav__container">
           <a href="#" class="logo__link">
-            <img class="logo" src="./assets/logo.png" alt="" />Q-React
+            <img class="logo" src="./assets/logo.png" alt="" />Treact
           </a>
           <ul class="nav__links">
             <li><a href="#" class="nav__link">About</a></li>
@@ -393,7 +393,7 @@
            
             <div class="dev__bg--container">
               <div class="dev__description--wrapper">
-                <h2 class="dev__description">Developers all over the world are happily using <span class="text--purple">Q-React.</span></h2>
+                <h2 class="dev__description">Developers all over the world are happily using <span class="text--purple">Treact.</span></h2>
                 <div class="dev__btn--wrapper">
                 <a href="" class="dev__btn dev1">Get Started</a>
                 <a href="" class="dev__btn dev2">Contact Us</a></div>
@@ -446,10 +446,10 @@
         </div>
         <div class="footer__info">
           <a href="#" class="footer__img--wrapper">
-            <img class="footer__img" src="./assets/footer log.png" alt="" /> <span class="qreact">Q-React</span>
+            <img class="footer__img" src="./assets/footer log.png" alt="" /> <span class="qreact">Treact</span>
           </a>
            <div class="footer__copyright">
-            Copyrights © 2023 Q-React Developers Inc. All Rights Reserved.
+            Copyrights © 2023 Treact Developers Inc. All Rights Reserved.
            </div>
            <div class="footer__links">
             <a href="" class="footer__link">
