edited some animations

--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
             <img class="logo" src="./assets/logo.png" alt="" />Treact
           </a>
           <ul class="nav__links">
-            <li><a href="#" class="nav__link">About</a></li>
-            <li><a href="#" class="nav__link">Blog</a></li>
-            <li><a href="#" class="nav__link">Pricing</a></li>
-            <li><a href="#" class="nav__link">Contact Us</a></li>
-            <li><a href="#" class="nav__link">Log in</a></li>
+            <li><a href="#" class="nav__link link__hover--effect">About</a></li>
+            <li><a href="#" class="nav__link link__hover--effect">Blog</a></li>
+            <li><a href="#" class="nav__link link__hover--effect">Pricing</a></li>
+            <li><a href="#" class="nav__link link__hover--effect">Contact Us</a></li>
+            <li><a href="#" class="nav__link link__hover--effect">Log in</a></li>
             <li>
               <a href="#" class="nav__link nav__link--primary">Sign Up</a>
             </li>
